--- a/kernel-m68k.config
+++ b/kernel-m68k.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/m68k 6.1.53 Kernel Configuration
+# Linux/m68k 6.1.62 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="m68k-openadk-linux-uclibc-gcc (GCC) 13.2.0"
 CONFIG_CC_IS_GCC=y
@@ -85,7 +85,8 @@ CONFIG_SRCU=y
 CONFIG_TINY_SRCU=y
 # end of RCU Subsystem
 
-# CONFIG_IKCONFIG is not set
+CONFIG_IKCONFIG=y
+CONFIG_IKCONFIG_PROC=y
 # CONFIG_IKHEADERS is not set
 CONFIG_LOG_BUF_SHIFT=17
 CONFIG_PRINTK_SAFE_LOG_BUF_SHIFT=13
@@ -334,7 +335,8 @@ CONFIG_BINFMT_FLAT_ARGVP_ENVP_ON_STACK=y
 #
 # Memory Management options
 #
-# CONFIG_SWAP is not set
+CONFIG_SWAP=y
+# CONFIG_ZSWAP is not set
 
 #
 # SLAB allocator options
