--- a/kernel-xtensa.config
+++ b/kernel-xtensa.config
@@ -11,7 +11,6 @@ CONFIG_AS_VERSION=24100
 CONFIG_LD_IS_BFD=y
 CONFIG_LD_VERSION=24100
 CONFIG_LLD_VERSION=0
-CONFIG_CC_CAN_LINK_STATIC=y
 CONFIG_CC_HAS_ASM_INLINE=y
 CONFIG_CC_HAS_NO_PROFILE_FN_ATTR=y
 CONFIG_PAHOLE_VERSION=125
@@ -112,7 +111,7 @@ CONFIG_NET_NS=y
 # CONFIG_SCHED_AUTOGROUP is not set
 # CONFIG_RELAY is not set
 CONFIG_BLK_DEV_INITRD=y
-CONFIG_INITRAMFS_SOURCE="../xtensa.cpio"
+CONFIG_INITRAMFS_SOURCE="../kernel-xtensa.cpio"
 CONFIG_INITRAMFS_ROOT_UID=0
 CONFIG_INITRAMFS_ROOT_GID=0
 # CONFIG_RD_GZIP is not set
